fix: fix header and hero spacing

--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -1,13 +1,26 @@
+.headerContainer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: $white;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 4rem;
+  background-color: $white;
+  width: 100%;
   @include layoutDefault();
 
   &__open {
     flex-direction: column;
     font-size: 1.6rem;
+    height: 100vh;
+    justify-content: flex-start;
 
     nav {
       width: -webkit-fill-available;
@@ -29,6 +42,10 @@
     @include screen-size('desktop-small') {
       width: unset;
     }
+  }
+
+  &__icon {
+    cursor: pointer;
   }
 
   &__navigation {
@@ -63,6 +80,7 @@
     border-bottom-width: 0.1rem;
     border-bottom-style: solid;
     padding: 2rem 0;
+    transition: all 0.8s;
 
     @include screen-size('desktop-small') {
       border-bottom-color: unset;
@@ -70,6 +88,13 @@
       border-bottom-style: unset;
       padding: unset;
       font-size: 2rem;
+    }
+  }
+
+  &__link {
+    &:hover {
+      color: $cordovan;
+      font-weight: 700 !important;
     }
   }
 }
